# DecentEnclaveServer

./: CMakeLists.txt
src/: CMakeLists.txt  DecentEnclaveServer.service  components_config.json
src/Trusted/: AppRequestHandler.cpp  AppRequestHandler.hpp  Certs.hpp  Enclave.cpp  Enclave.edl  Keys.hpp  ServerLambdaHandler_t.cpp
src/Untrusted/: DecentServer.hpp  Main.cpp
